<resources>
    <string name="app_name">Setting</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">Settings</string>
    <string name="profile_settings_header">Профиль</string>
    <string name="login_title">Логин</string>
    <string name="name_title">Имя</string>
    <string name="password_title">Пароль</string>
    <string name="nickname_title">Ник</string>
    <string name="birthday_title">День рождения</string>
    <string name="city_title">Город</string>
    <string name="logo">Логотип</string>
    <string name="languages">Язык</string>
    <string name="notifications_title">Уведомления</string>
    <string name="synchronization_settings_header">Синхронизация данных</string>
    <string name="local_profile_sync_frequency_title">Частота синхронизации профиля</string>
    <string name="local_quests_sync_frequency_title">Частота синхронизации квестов</string>
    <string name="remote_profile_sync_frequency_title">Частота синхронизации профиля с сервером</string>
    <string name="remote_quests_sync_frequency_title">Частота синхронизации квестов с сервера</string>
    <string name="other_settings_header">Другие настройки</string>
    <string name="event_notifications_frequency_title">Часота уведомлений о событий</string>
    <string name="lessons_frequency_title">Частота занятий</string>
    <string name="save_button_title">Сохранить</string>
    <string name="back_button_title">Не сохранять</string>
    <string name="key_quests_sync_frequency">quests_sync_frequency</string>
    <string name="key_profile_sync_frequency">profile_sync_frequency</string>
    <string name="key_login">login</string>
    <string name="key_password">password</string>
    <string name="key_name">name</string>
    <string name="key_nickname">nickname</string>
    <string name="key_nickname_color">nickname_color</string>
    <string name="key_birthday">birthday</string>
    <string name="key_city">city</string>
    <string name="key_logo">logo</string>
    <string name="key_life">life</string>
    <string name="key_goldlife">goldlife</string>
    <string name="key_premium">key_premium</string>
    <string name="key_languages">languages</string>
    <string name="key_notifications">notifications</string>
    <string name="key_event_notifications_frequency">event_notifications_frequency</string>
    <string name="key_lessons_alarm_time">lessons_frequency_time</string>
    <string name="key_lessons_alarm_days">lessons_frequency_days</string>
    <string name="lessons_frequency_time_title">Выберите время занятий</string>
    <string name="lessons_frequency_days_title">Дата занятий</string>
    <string name="key_save">key_save_button</string>

    <string name="logo_title">Логотип</string>
    <string name="languages_title">Языки</string>
    <string name="text_login">Введите ваш логин</string>

    <!-- Summaries -->
    <string name="summary_login">Введите ваш логин</string>
    <string name="summary_password">Введите ваш пароль</string>
    <string name="summary_name">Введите ваше имя</string>
    <string name="summary_nickname">Введите ваш никнейм</string>
    <string name="summary_birthday">Введите вашу дату рождения</string>
    <string name="summary_city">Введите ваш город</string>
    <string name="summary_logo">Введите ID вашего логотипа</string>
    <string name="summary_languages">Введите языки, которыми вы владеете</string>
    <string name="summary_profile_sync_frequency">Выберите частоту синхронизации локального профиля</string>
    <string name="summary_quests_sync_frequency">Выберите частоту синхронизации локальных заданий</string>
    <string name="summary_notifications">Включить или выключить уведомления</string>
    <string name="summary_event_notifications_frequency">Выберите частоту уведомлений о событиях</string>
    <string name="summary_lessons_frequency_time">Выберите время занятий</string>
    <string name="summary_lessons_frequency_days">Выберите дни недели для занятий</string>
    <string name="tpovId">tpovId</string>
    
    <!-- Modern Settings -->
    <string name="settings_subtitle">Настройте приложение под себя</string>
    
    <!-- Profile Settings -->
    <string name="settings_profile_title">Профиль</string>
    <string name="settings_profile_description">Логин, имя, никнейм и личная информация</string>
    
    <!-- Security Settings -->
    <string name="settings_security_title">Безопасность</string>
    <string name="settings_security_description">Пароль и защита аккаунта</string>
    
    <!-- Notifications Settings -->
    <string name="settings_notifications_title">Уведомления</string>
    <string name="settings_notifications_description">Настройки уведомлений и напоминаний</string>
    
    <!-- Schedule Settings -->
    <string name="settings_schedule_title">Расписание</string>
    <string name="settings_schedule_description">Время занятий и частота изучения</string>
    
    <!-- About Settings -->
    <string name="settings_about_title">О приложении</string>
    <string name="settings_about_description">Информация о версии и разработчиках</string>
    
    <!-- Export Settings -->
    <string name="settings_export_title">Экспорт данных</string>
    <string name="settings_export_description">Синхронизация и резервное копирование</string>
    
    <!-- Sync Settings -->
    <string name="settings_sync_title">Синхронизация</string>
    <string name="settings_sync_description">Настройки синхронизации данных профиля и квестов</string>

</resources>
