<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_settings_header">

        <EditTextPreference
            app:key="login"
            app:title="@string/login_title"
            app:summary="Введите ваш логин"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/password_title"
            app:summary="Введите ваш пароль"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="name"
            app:title="@string/name_title"
            app:summary="Введите ваше имя"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="nickname"
            app:title="@string/nickname_title"
            app:summary="Введите ваш никнейм"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="birthday"
            app:title="@string/birthday_title"
            app:summary="Введите вашу дату рождения"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="city"
            app:title="@string/city_title"
            app:summary="Введите ваш город"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="logo"
            app:title="@string/logo"
            app:summary="Введите ID вашего логотипа"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="languages"
            app:title="@string/languages"
            app:summary="Введите языки, которыми вы владеете"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/synchronization_settings_header">

        <ListPreference
            app:key="@string/profile_sync_frequency"
            app:title="@string/local_profile_sync_frequency_title"
            app:summary="Выберите частоту синхронизации локального профиля"
            app:entries="@array/sync_frequency_entries"
            app:entryValues="@array/sync_frequency_values"
            app:defaultValue="1" />

        <ListPreference
            app:key="@string/quests_sync_frequency"
            app:title="@string/local_quests_sync_frequency_title"
            app:summary="Выберите частоту синхронизации локальных заданий"
            app:entries="@array/sync_frequency_entries"
            app:entryValues="@array/sync_frequency_values"
            app:defaultValue="1" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_settings_header">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifications_title"
            app:summary="Включить или выключить уведомления" />

        <ListPreference
            app:key="event_notifications_frequency"
            app:title="@string/event_notifications_frequency_title"
            app:summary="Выберите частоту уведомлений о событиях"
            app:entries="@array/notification_frequency_entries"
            app:entryValues="@array/notification_frequency_values"
            app:defaultValue="1" />

        <com.tpov.setting.TimePickerPreference
            app:key="lessons_frequency_time"
            app:title="@string/lessons_frequency_time_title"
            app:summary="Выберите время занятий" />

        <MultiSelectListPreference
            app:key="lessons_frequency_days"
            app:title="@string/lessons_frequency_days_title"
            app:summary="Выберите дни недели для занятий"
            app:entries="@array/days_of_week"
            app:entryValues="@array/days_of_week" />

    </PreferenceCategory>

</PreferenceScreen>
